--- a/styles.css
+++ b/styles.css
@@ -9,62 +9,24 @@ html {
 }
 
 /* General styling */
-h1 {
-  font-size: 2rem;
-  line-height: 3;
-}
-
-h2 {
-  line-height: 2;
-}
-
-p,
-li {
-  line-height: 1.5;
-}
-
-a {
-  font-family: "Libre Baskerville", serif;
-}
-
 .main-container {
-  height: 100vh;
   width: 1200px;
   margin: 0 auto;
+  height: 100vh;
 }
 
-span {
-  font-size: 2rem;
-}
-
-strong {
-  display: block;
-}
-
-.main-links {
-  margin-top: 1rem;
-}
-
-.main-links li {
+.links {
   list-style: none;
-  width: 40%;
-  text-align: center;
-  line-height: 5;
-  margin-right: 2rem;
 }
 
-.main-links li:last-of-type {
-  margin-right: none;
-}
-
-.main-links a {
-  display: inline-block;
-  width: 100%;
-
-  text-decoration: none;
-  font-size: 0.8rem;
-  color: #000;
+.links li {
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.links a {
+  padding: 1rem;
+  text-decoration: none;
+  color: #000;
 }
 
 /* Grid and flexbox layout */
@@ -75,7 +37,7 @@ strong {
     "main    aside"
     "footer  footer";
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr 3fr 1fr;
+  grid-template-rows: auto 4fr 1fr;
 }
 
 header {
@@ -101,6 +63,13 @@ aside {
   align-items: center;
 }
 
-.main-links {
+.links {
   display: flex;
+  justify-content: space-between;
+}
+
+.links a {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
