--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Design setup */
 * {
   margin: 0;
   padding: 0;
@@ -5,14 +6,14 @@
   box-sizing: border-box;
 }
 
-/* General styling */
 .main-container {
   max-width: 1200px;
   margin: 0 auto;
   height: 100vh;
 }
 
-h1 {
+/* General styling */
+.title {
   font-size: 3em;
 }
 
@@ -20,23 +21,18 @@ p {
   font-size: 1.5em;
 }
 
-h1,
-h2,
+.price {
+  font-size: 2.5rem;
+}
+
+.title,
+.subtitle,
 p {
   margin-bottom: 1rem;
 }
 
-span {
-  font-size: 2rem;
-}
-
 .links {
   list-style: none;
-}
-
-.links li,
-.neo-features > i {
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .links a {
@@ -45,11 +41,16 @@ span {
   color: #000;
 }
 
-.links a i {
+.links a .icons {
   margin: 0 1rem;
 }
 
-.neo-features > i {
+.links li,
+.neo-features > .icons {
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+.neo-features > .icons {
   border-radius: 30px;
   padding: 0.8rem;
   margin-right: 1.5rem;
