--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,11 @@
 
 /* General styling */
 .title {
-  font-size: 3em;
+  font-size: 3rem;
 }
 
 p {
-  font-size: 1.5em;
+  font-size: 1.5rem;
 }
 
 .price {
